fixed clipping issue

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,8 @@
 }
 
 .player-container {
-  height:100%;
+  height:90%;
+  padding-top:2.5%;
   display:grid;
   grid-template-columns: 40% 60%;
   grid-template-rows: 50% 40% 10%;
